--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daneen Mays - Visual Prompt Engineer</title>
+    <title>Daneen Mays - Visual AI Prompt Engineer</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -22,18 +22,47 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="container">
-        <h1>Visual Prompt Engineer</h1>
+        <div class="hero-subtitle">Visual AI Prompt Engineer</div>
+        <h1>Transforming Ideas into Precise AI Visuals</h1>
         <p>
-          Transforming ideas into precise AI prompts that deliver exceptional
-          visual content, driven by systematic design and a quality-first
-          mindset.
+          9+ years of QA expertise meets cutting-edge AI prompt engineering. I build systematic frameworks that deliver consistent, high-quality visual content at enterprise scale — combining creative vision with quality-first precision.
         </p>
         <div class="hero-buttons">
           <a href="#projects" class="btn btn-primary">View Projects</a>
-          <a href="https://daneenm.github.io/visual_prompt_builder/" class="btn btn-secondary"
-            >Build a Prompt</a
-          >
+          <a href="https://daneenm.github.io/visual_prompt_builder/" class="btn btn-secondary">Try Prompt Builder</a>
           <a href="/Daneen.pdf" class="btn btn-secondary">View Resume</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills Highlight -->
+    <section class="skills-highlight">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">Microsoft-Ready Skills</h2>
+          <p class="section-subtitle">Proven expertise in the core competencies for Visual AI Prompt Writing roles</p>
+        </div>
+        <div class="skills-grid">
+          <div class="skill-card">
+            <div class="skill-icon">🎯</div>
+            <h3>Visual AI Content Creation</h3>
+            <p>2+ years of professional prompt engineering at Outlier & Aligner, with proven frameworks that improved model consistency by 25%</p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">✍️</div>
+            <h3>Excellent Grammar & Writing</h3>
+            <p>9+ years of technical documentation, with systematic prompt frameworks that ensure clarity and consistency</p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">🎨</div>
+            <h3>Visual Acumen & Design</h3>
+            <p>Strong portfolio demonstrating expertise in visual composition, color theory, lighting, and cinematic storytelling</p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">⚡</div>
+            <h3>Enterprise-Scale Quality</h3>
+            <p>QA background ensures reliable, consistent outputs under tight deadlines with systematic testing and iteration</p>
+          </div>
         </div>
       </div>
     </section>
@@ -42,56 +71,73 @@
     <section class="projects" id="projects">
       <div class="container">
         <div class="section-header">
-          <h2 class="section-title">Featured Work</h2>
+          <h2 class="section-title">Featured Portfolio</h2>
           <p class="section-subtitle">
-            Exploring the Art and Science of AI Prompt Engineering: A Systematic Showcase of Innovative Visual Projects
+            Systematic exploration of AI prompt engineering across platforms, demonstrating both creative vision and quality-first methodology
           </p>
         </div>
         <div class="project-grid">
           <article class="project-card">
-            <div class="project-image">Project Image Placeholder</div>
+            <div class="project-image">Midjourney Cinematic Study</div>
             <div class="project-content">
-              <h3 class="project-title">Enterprise Brand Guidelines</h3>
+              <h3 class="project-title">Brand-Consistent Cinematic Storytelling</h3>
+              <div class="project-tags">
+                <span class="project-tag">Midjourney</span>
+                <span class="project-tag">Systematic Testing</span>
+                <span class="project-tag">Visual Identity</span>
+              </div>
               <p class="project-subtitle">
-                Systematic prompt framework for consistent brand imagery across
-                platforms
+                Controlled variable testing of lighting, composition, and color palette to demonstrate scalable prompt engineering for enterprise visual consistency
               </p>
-              <a href="/projects/project-01-midjourney-styling/midjourney.html" class="project-link">View Project →</a>
+              <a href="/projects/project-01-midjourney-styling/midjourney.html" class="project-link">View Case Study →</a>
             </div>
           </article>
 
           <article class="project-card">
-            <div class="project-image">Project Image Placeholder</div>
+            <div class="project-image">DALL-E Precision Control</div>
             <div class="project-content">
-              <h3 class="project-title">Product Visualization Suite</h3>
+              <h3 class="project-title">Instruction-Following & Layout Mastery</h3>
+              <div class="project-tags">
+                <span class="project-tag">DALL-E 3</span>
+                <span class="project-tag">Precision</span>
+                <span class="project-tag">Layout Control</span>
+              </div>
               <p class="project-subtitle">
-                Automated prompt generation for e-commerce product photography
-                styles
+                Advanced spatial relationship prompting and text rendering accuracy for marketing and product visualization applications
               </p>
-              <a href="#" class="project-link">View Project →</a>
+              <a href="#" class="project-link">Coming Soon →</a>
             </div>
           </article>
 
           <article class="project-card">
-            <div class="project-image">Project Image Placeholder</div>
+            <div class="project-image">Stable Diffusion Framework</div>
             <div class="project-content">
-              <h3 class="project-title">Marketing Asset Pipeline</h3>
+              <h3 class="project-title">Advanced Prompt Architecture</h3>
+              <div class="project-tags">
+                <span class="project-tag">Stable Diffusion</span>
+                <span class="project-tag">Negative Prompts</span>
+                <span class="project-tag">Fine-tuning</span>
+              </div>
               <p class="project-subtitle">
-                Scalable prompt templates for social media and advertising
-                visuals
+                Custom prompt weighting, negative prompting, and model fine-tuning for specialized business applications
               </p>
-              <a href="#" class="project-link">View Project →</a>
+              <a href="#" class="project-link">Coming Soon →</a>
             </div>
           </article>
 
           <article class="project-card">
-            <div class="project-image">Project Image Placeholder</div>
+            <div class="project-image">Visual Prompt Builder</div>
             <div class="project-content">
-              <h3 class="project-title">Model Evaluation Framework</h3>
+              <h3 class="project-title">Interactive Prompt Generation Tool</h3>
+              <div class="project-tags">
+                <span class="project-tag">React</span>
+                <span class="project-tag">UI/UX</span>
+                <span class="project-tag">Automation</span>
+              </div>
               <p class="project-subtitle">
-                Quality assessment system for comparing AI model outputs
+                Live prompt building interface demonstrating systematic framework application and user-centered design
               </p>
-              <a href="#" class="project-link">View Project →</a>
+              <a href="https://daneenm.github.io/visual_prompt_builder/" class="project-link" target="_blank">Try Live Tool →</a>
             </div>
           </article>
         </div>
@@ -102,16 +148,27 @@
     <section class="about" id="about">
       <div class="container">
         <div class="about-content">
-          <h2 class="section-title">About</h2>
+          <h2 class="section-title">Why Microsoft Should Hire Me</h2>
           <p class="about-text">
-            Visual Prompt Engineer with 9+ years of front-end QA expertise, now building structured,
-            high-impact prompts for generative visual models like Midjourney, DALL·E, and Stable Diffusion.
+            I bring a unique combination of creative vision and systematic quality control that's essential for enterprise-scale AI content generation. My QA background isn't just experience — it's my competitive advantage.
           </p>
           <p class="about-text">
-          My background spans UI automation, integration testing, and LLM evaluation — blending precision, 
-          creativity, and a deep understanding of how systems behave. I bring a quality-first mindset to AI, 
-          ensuring every prompt delivers consistent, visually compelling, and logically sound results.
+            While others focus purely on creativity, I build frameworks that ensure consistent, reliable visual outputs under tight deadlines. I understand how to test, iterate, and document AI workflows for scalable business success.
           </p>
+          
+          <div class="experience-highlight">
+            <h3>Directly Relevant Experience</h3>
+            <ul class="experience-list">
+              <li><strong>Professional AI Experience:</strong> 2+ years as AI Prompt Engineer Reviewer at Outlier and AI Response Evaluator at Aligner</li>
+              <li><strong>Proven Results:</strong> Designed 100+ logic-based prompts, improved model output consistency by 25%, reduced revision time by 30%</li>
+              <li><strong>Visual AI Tools:</strong> Professional experience with Midjourney, DALL-E, Leonardo, Sora, and OpenAI platforms</li>
+              <li><strong>Quality at Scale:</strong> 9+ years managing automated testing pipelines and documentation systems</li>
+              <li><strong>Creative + Technical:</strong> Proven ability to balance artistic vision with systematic methodology</li>
+              <li><strong>Fast-Paced Environment:</strong> Experienced working under tight deadlines while maintaining quality standards</li>
+              <li><strong>Collaborative Skills:</strong> Strong communication and feedback integration from years of cross-team QA work</li>
+              <li><strong>Problem-Solving:</strong> Expert at identifying edge cases, failure modes, and optimization opportunities</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -124,6 +181,7 @@
           <div class="social-links">
             <a href="https://github.com/DaneenM">GitHub</a>
             <a href="https://linkedin.com/in/daneen-mays">LinkedIn</a>
+            <a href="mailto:hello@daneenmays.com">Email</a>
           </div>
         </div>
       </div>
