--- a/projects/project-01-midjourney-styling/midjourney.html
+++ b/projects/project-01-midjourney-styling/midjourney.html
@@ -640,7 +640,7 @@
                 <div class="footer-name">Daneen Mays</div>
                 <div class="footer-links">
                     <a href="/index.html">Portfolio</a>
-                    <a href="/Daneen.pdf">Resume</a>
+                    <a href="/Resume.pdf">Resume</a>
                     <a href="https://github.com/DaneenM">GitHub</a>
                     <a href="https://linkedin.com/in/daneen-mays">LinkedIn</a>
                 </div>
