--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
         <div class="hero-subtitle">Visual AI Prompt Engineer</div>
         <h1>Transforming Ideas into Precise AI Visuals</h1>
         <p>
-          9+ years of QA expertise meets cutting-edge AI prompt engineering. I build systematic frameworks that deliver consistent, high-quality visual content at enterprise scale — combining creative vision with quality-first precision.
+          9+ years of QA expertise meets cutting-edge AI prompt engineering. I
+          build structured frameworks that deliver consistent, high-quality
+          visual content at enterprise scale — combining creative vision with
+          quality-first precision.
         </p>
         <div class="hero-buttons">
           <a href="#projects" class="btn btn-primary">View Projects</a>
-          <a href="https://daneenm.github.io/visual_prompt_builder/" class="btn btn-secondary">Try Prompt Builder</a>
+          <a
+            href="https://daneenm.github.io/visual_prompt_builder/"
+            class="btn btn-secondary"
+            >Try Prompt Builder</a
+          >
           <a href="/Daneen.pdf" class="btn btn-secondary">View Resume</a>
         </div>
       </div>
@@ -40,28 +47,56 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Microsoft-Ready Skills</h2>
-          <p class="section-subtitle">Proven expertise in the core competencies for Visual AI Prompt Writing roles</p>
+          <p class="section-subtitle">
+            Proven expertise in the core competencies for Visual AI Prompt
+            Writing roles
+          </p>
         </div>
         <div class="skills-grid">
           <div class="skill-card">
             <div class="skill-icon">🎯</div>
-            <h3>Visual AI Content Creation</h3>
-            <p>2+ years of professional prompt engineering at Outlier & Aligner, with proven frameworks that improved model consistency by 25%</p>
-          </div>
-          <div class="skill-card">
-            <div class="skill-icon">✍️</div>
-            <h3>Excellent Grammar & Writing</h3>
-            <p>9+ years of technical documentation, with systematic prompt frameworks that ensure clarity and consistency</p>
+            <h3>AI Prompt Engineering</h3>
+            <p>
+              2+ years of professional experience at Outlier & Aligner, with
+              proven frameworks that dramatically improved model consistency and
+              reduced revision cycles through methodical testing
+            </p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">🎨</div>
             <h3>Visual Acumen & Design</h3>
-            <p>Strong portfolio demonstrating expertise in visual composition, color theory, lighting, and cinematic storytelling</p>
+            <p>
+              Expertise in visual composition, color theory, lighting, and
+              cinematic storytelling with professional content creation across
+              multiple AI platforms
+            </p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">⚡</div>
             <h3>Enterprise-Scale Quality</h3>
-            <p>QA background ensures reliable, consistent outputs under tight deadlines with systematic testing and iteration</p>
+            <p>
+              9 years of QA expertise ensuring reliable, consistent outputs
+              under tight deadlines with automated testing pipelines and
+              strategic iteration methodologies
+            </p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">💻</div>
+            <h3>JavaScript Development</h3>
+            <p>
+              Modern JavaScript development since 2023, building interactive
+              tools and user-centered interfaces with React, responsive design,
+              and automation frameworks
+            </p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">✍️</div>
+            <h3>Technical Writer</h3>
+            <p>
+              1.5 years of professional technical writing with comprehensive
+              documentation frameworks that ensure clarity and consistency
+              across complex AI projects
+            </p>
           </div>
         </div>
       </div>
@@ -73,55 +108,79 @@
         <div class="section-header">
           <h2 class="section-title">Featured Portfolio</h2>
           <p class="section-subtitle">
-            Systematic exploration of AI prompt engineering across platforms, demonstrating both creative vision and quality-first methodology
+            Methodical exploration of AI prompt engineering across platforms,
+            demonstrating both creative vision and quality-first methodology
           </p>
         </div>
         <div class="project-grid">
           <article class="project-card">
             <div class="project-image">Midjourney Cinematic Study</div>
             <div class="project-content">
-              <h3 class="project-title">Brand-Consistent Cinematic Storytelling</h3>
+              <h3 class="project-title">
+                Brand-Consistent Cinematic Storytelling
+              </h3>
               <div class="project-tags">
                 <span class="project-tag">Midjourney</span>
-                <span class="project-tag">Systematic Testing</span>
+                <span class="project-tag">Methodical Testing</span>
                 <span class="project-tag">Visual Identity</span>
               </div>
               <p class="project-subtitle">
-                Controlled variable testing of lighting, composition, and color palette to demonstrate scalable prompt engineering for enterprise visual consistency
+                Controlled experiments isolating individual variables - testing
+                how specific changes in lighting, composition, and color palette
+                impact visual storytelling and cinematic narrative.
               </p>
-              <a href="/projects/project-01-midjourney-styling/midjourney.html" class="project-link">View Case Study →</a>
+              <a
+                href="/projects/project-02-midjourney-styling/midjourney.html"
+                class="project-link"
+                >View Case Study →</a
+              >
             </div>
           </article>
 
           <article class="project-card">
             <div class="project-image">DALL-E Precision Control</div>
             <div class="project-content">
-              <h3 class="project-title">Instruction-Following & Layout Mastery</h3>
+              <h3 class="project-title">
+                Professional Visual Content Creation
+              </h3>
               <div class="project-tags">
                 <span class="project-tag">DALL-E 3</span>
                 <span class="project-tag">Precision</span>
                 <span class="project-tag">Layout Control</span>
               </div>
               <p class="project-subtitle">
-                Advanced spatial relationship prompting and text rendering accuracy for marketing and product visualization applications
+                Comprehensive exploration of visual attributes applied to
+                real-life scenarios - demonstrating how fundamental design
+                elements translate into professional marketing and brand
+                applications
               </p>
-              <a href="#" class="project-link">Coming Soon →</a>
+              <a
+                href="/projects/project-01-dalle-visual-content/dalle.html"
+                class="project-link"
+                >View Project →</a
+              >
             </div>
           </article>
 
           <article class="project-card">
-            <div class="project-image">Stable Diffusion Framework</div>
+            <div class="project-image">Sora Video Generation</div>
             <div class="project-content">
-              <h3 class="project-title">Advanced Prompt Architecture</h3>
+              <h3 class="project-title">AI-Powered Video Content Creation</h3>
               <div class="project-tags">
-                <span class="project-tag">Stable Diffusion</span>
-                <span class="project-tag">Negative Prompts</span>
-                <span class="project-tag">Fine-tuning</span>
+                <span class="project-tag">Sora</span>
+                <span class="project-tag">Video</span>
+                <span class="project-tag">Storytelling</span>
               </div>
               <p class="project-subtitle">
-                Custom prompt weighting, negative prompting, and model fine-tuning for specialized business applications
+                Walkthrough demonstrating structured prompt creation process for
+                video generation - see prompt engineering methodology in action
+                from concept to final output
               </p>
-              <a href="#" class="project-link">Coming Soon →</a>
+              <a
+                href="/projects/project-03-sora-video-prompting/sora.html"
+                class="project-link"
+                >View Project →</a
+              >
             </div>
           </article>
 
@@ -130,16 +189,39 @@
             <div class="project-content">
               <h3 class="project-title">Interactive Prompt Generation Tool</h3>
               <div class="project-tags">
-                <span class="project-tag">React</span>
+                <span class="project-tag">JavaScript</span>
                 <span class="project-tag">UI/UX</span>
                 <span class="project-tag">Automation</span>
               </div>
               <p class="project-subtitle">
-                Live prompt building interface demonstrating systematic framework application and user-centered design
+                Live prompt building interface demonstrating organized framework
+                application and user-centered design
               </p>
-              <a href="https://daneenm.github.io/visual_prompt_builder/" class="project-link" target="_blank">Try Live Tool →</a>
+              <a
+                href="https://daneenm.github.io/visual_prompt_builder/"
+                class="project-link"
+                target="_blank"
+                >Try Live Tool →</a
+              >
             </div>
           </article>
+
+          <!-- <article class="project-card">
+            <div class="project-image">Stable Diffusion</div>
+            <div class="project-content">
+              <h3 class="project-title">Enterprise-Grade Model Control</h3>
+              <div class="project-tags">
+                <span class="project-tag">Stable Diffusion</span>
+                <span class="project-tag">ControlNet</span>
+                <span class="project-tag">LoRA Training</span>
+              </div>
+              <p class="project-subtitle">
+                Advanced model customization, ControlNet integration, and LoRA
+                fine-tuning for specialized enterprise visual requirements
+              </p>
+              <a href="#" class="project-link">Coming Soon →</a>
+            </div>
+          </article> -->
         </div>
       </div>
     </section>
@@ -150,23 +232,55 @@
         <div class="about-content">
           <h2 class="section-title">Why Microsoft Should Hire Me</h2>
           <p class="about-text">
-            I bring a unique combination of creative vision and systematic quality control that's essential for enterprise-scale AI content generation. My QA background isn't just experience — it's my competitive advantage.
+            I bring a unique combination of creative vision and methodical
+            quality control that's essential for enterprise-scale AI content
+            generation. My QA background isn't just experience — it's my
+            competitive advantage.
           </p>
           <p class="about-text">
-            While others focus purely on creativity, I build frameworks that ensure consistent, reliable visual outputs under tight deadlines. I understand how to test, iterate, and document AI workflows for scalable business success.
+            While others focus purely on creativity, I build frameworks that
+            ensure consistent, reliable visual outputs under tight deadlines. I
+            understand how to test, iterate, and document AI workflows for
+            scalable business success.
           </p>
-          
+
           <div class="experience-highlight">
             <h3>Directly Relevant Experience</h3>
             <ul class="experience-list">
-              <li><strong>Professional AI Experience:</strong> 2+ years as AI Prompt Engineer Reviewer at Outlier and AI Response Evaluator at Aligner</li>
-              <li><strong>Proven Results:</strong> Designed 100+ logic-based prompts, improved model output consistency by 25%, reduced revision time by 30%</li>
-              <li><strong>Visual AI Tools:</strong> Professional experience with Midjourney, DALL-E, Leonardo, Sora, and OpenAI platforms</li>
-              <li><strong>Quality at Scale:</strong> 9+ years managing automated testing pipelines and documentation systems</li>
-              <li><strong>Creative + Technical:</strong> Proven ability to balance artistic vision with systematic methodology</li>
-              <li><strong>Fast-Paced Environment:</strong> Experienced working under tight deadlines while maintaining quality standards</li>
-              <li><strong>Collaborative Skills:</strong> Strong communication and feedback integration from years of cross-team QA work</li>
-              <li><strong>Problem-Solving:</strong> Expert at identifying edge cases, failure modes, and optimization opportunities</li>
+              <li>
+                <strong>Professional AI Experience:</strong> 2+ years as AI
+                Prompt Engineer Reviewer at Outlier and AI Response Evaluator at
+                Aligner
+              </li>
+              <li>
+                <strong>Proven Results:</strong> Designed 100+ logic-based
+                prompts, improved model output consistency by 25%, reduced
+                revision time by 30%
+              </li>
+              <li>
+                <strong>Visual AI Tools:</strong> Experience with Midjourney,
+                DALL-E, Leonardo, Sora, and OpenAI platforms
+              </li>
+              <li>
+                <strong>Quality at Scale:</strong> 9+ years managing automated
+                testing pipelines and documentation systems
+              </li>
+              <li>
+                <strong>Creative + Technical:</strong> Proven ability to balance
+                artistic vision with structured methodology
+              </li>
+              <li>
+                <strong>Fast-Paced Environment:</strong> Experienced working
+                under tight deadlines while maintaining quality standards
+              </li>
+              <li>
+                <strong>Collaborative Skills:</strong> Strong communication and
+                feedback integration from years of cross-team QA work
+              </li>
+              <li>
+                <strong>Problem-Solving:</strong> Expert at identifying edge
+                cases, failure modes, and optimization opportunities
+              </li>
             </ul>
           </div>
         </div>
@@ -181,7 +295,6 @@
           <div class="social-links">
             <a href="https://github.com/DaneenM">GitHub</a>
             <a href="https://linkedin.com/in/daneen-mays">LinkedIn</a>
-            <a href="mailto:hello@daneenmays.com">Email</a>
           </div>
         </div>
       </div>
