add fox prompt that did not work to sora

--- a/projects/project-03-sora-video-prompting/sora.html
+++ b/projects/project-03-sora-video-prompting/sora.html
@@ -887,7 +887,7 @@
                       [Consistent Pixar-style fox with stable features across
                       multiple emotional scenes]<br />
                       <small
-                        >Systematic character development through 3
+                        >Systematic character development through 2
                         iterations</small
                       >
                     </div>
@@ -897,7 +897,7 @@
               <div class="final-prompt">
                 Pixar-style 3D animated fox character: small to medium size,
                 bright orange fur with cream-colored chest and inner ears,
-                distinctive black-tipped ears and tail, large expressive amber
+                distinctive white ears with black tips and tail, large expressive amber
                 eyes, black nose, friendly facial structure with slightly
                 rounded snout. Consistent character design across scenes,
                 maintain fur texture and color patterns, warm lighting,
@@ -924,13 +924,14 @@
                     <div class="step-status">Failed</div>
                   </div>
                   <div class="prompt-code">
-                    "Orange fox character in animated style"
+                    "Pixar-style 3D animated fox character: small to medium size, bright orange fur with cream-colored chest and inner ears, distinctive black-tipped ears and tail, large expressive amber eyes, black nose, friendly facial structure with slightly rounded snout. Consistent character design across scenes, maintain fur texture and color patterns, warm lighting, family-friendly animation style, expressive but stable features throughout different emotions and actions."
                   </div>
                   <div class="step-analysis">
-                    <strong>Result:</strong> Severe character drift between
-                    scenes. Fox sometimes transformed into different animals
-                    (dog, wolf), fur color changed from orange to brown/red, and
-                    ears spontaneously changed shape and size.
+                    <strong>Result:</strong> Character inconsistency issues with
+                    ear markings. The fox maintained its species and basic orange
+                    coloring, but the distinctive black ear tips failed to appear
+                    correctly - instead showing entirely black ears when only the
+                    tips should be black.
                   </div>
                   <div class="step-insight">
                     <strong>Problem Identified:</strong> Classic Sora limitation
@@ -940,44 +941,17 @@
                   </div>
                 </div>
 
-                <!-- Iteration 2: Improved -->
-                <div class="iteration-step improved">
-                  <div class="step-header">
-                    <div class="step-number">2</div>
-                    <div class="step-title">Detailed Character Features</div>
-                    <div class="step-status">Improved</div>
-                  </div>
-                  <div class="prompt-code">
-                    "Small orange fox with black-tipped ears, cream chest, amber
-                    eyes, black nose, Pixar animation style"
-                  </div>
-                  <div class="step-analysis">
-                    <strong>Result:</strong> Better species consistency but
-                    still experienced character drift issues. Ear markings
-                    sometimes disappeared mid-scene, and facial proportions
-                    shifted slightly between cuts.
-                  </div>
-                  <div class="step-insight">
-                    <strong>Learning:</strong> Specific anatomical details
-                    reduce morphing but don't eliminate Sora's object permanence
-                    issues. Characters can still lose distinctive features
-                    during video sequences.
-                  </div>
-                </div>
-
-                <!-- Iteration 3: Success -->
+                <!-- Iteration 2: Success -->
                 <div class="iteration-step success">
                   <div class="step-header">
-                    <div class="step-number">3</div>
-                    <div class="step-title">
-                      Complete Character DNA + Consistency Commands
-                    </div>
+                    <div class="step-number">2</div>
+                    <div class="step-title">Complete Character DNA + Consistency Commands</div>
                     <div class="step-status">Success</div>
                   </div>
                   <div class="prompt-code">
                     "Pixar-style 3D animated fox character: small to medium
                     size, bright orange fur with cream-colored chest and inner
-                    ears, distinctive black-tipped ears and tail, large
+                    ears, distinctive white ears with black tips and tail, large
                     expressive amber eyes, black nose, friendly facial structure
                     with slightly rounded snout. Consistent character design
                     across scenes, maintain fur texture and color patterns, warm
@@ -993,8 +967,9 @@
                   <div class="step-insight">
                     <strong>Key Breakthrough:</strong> Comprehensive character
                     profile + explicit "maintain" commands + "consistent design
-                    across scenes" directly addresses Sora's morphing/permanence
-                    issues. Detailed anatomical anchors prevent species drift.
+                    across scenes" directly addresses Sora's ear marking precision
+                    issues. Detailed anatomical anchors ensure proper black-tipped
+                    ears without color bleeding.
                   </div>
                 </div>
               </div>
